# calc

./: .gitignore  README.md  default.nix
hs/: .gitignore  .sosrc  build-js.sh  cabal.project  default.nix
hs/calc-cli/: calc-cli.cabal
hs/calc-cli/src/: Main.hs
hs/calc-core/: calc-core.cabal  calc.cabal
hs/calc-core/src/: Calc.hs  Prelude.hs
hs/calc-core/src/Calc/: Corpus.hs  Eval.hs  Evaluator.hs  Lexer.hs  Parser.hs  Simplifier.hs  Tokenizer.hs  Unit.hs  Units.hs
hs/calc-core/src/Calc/Lexer/: Types.hs
hs/calc-core/src/Calc/Parser/: Types.hs
hs/calc-core/src/Calc/Tokenizer/: Types.hs
hs/calc-core/src/Calc/Unit/: Definition.hs  Types.hs
hs/calc-core/src/Data/Decimal/: Extra.hs
hs/calc-core/test/: Main.hs  cases.txt
hs/calc-js/: calc-js.cabal
hs/calc-js/src/Calc/: JS.hs
hs/nix/: sources.json
nix/: sources.json
ts/: .eslintcache  .gitignore  default.nix  package.json  setup-hs-symlink.sh  shell.nix  yarn.nix
ts/public/: index.html
ts/src/: .App.tsx.kak.X8biZt  .App.tsx.kak.cBTFNN  App.tsx  calc.ts  index.tsx
