cabal-version:       2.4

name:                calc-cli
synopsis:            A fancy calculator with unit conversions and real-world data
version:             0.0.1.0
homepage:            https://github.com/utdemir/calc
license:             BSD-3-Clause
author:              Utku Demir
maintainer:          Utku Demir
copyright:           Utku Demir
category:            Data
build-type:          Simple

common common-options
  ghc-options:        -threaded
                      -Wall -Wpartial-fields -Wincomplete-record-updates -Widentities
                      -Wunused-packages
  default-language:    Haskell2010
  default-extensions: LambdaCase
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      GeneralizedNewtypeDeriving
                      DeriveGeneric
                      DeriveFunctor
                      DerivingStrategies
  mixins:             base hiding (Prelude)
  build-depends:      base

executable calc
  import:              common-options
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       calc-core
                     , text
