cabal-version:       2.4

name:                calc-core
synopsis:            A fancy calculator with unit conversions and real-world data
version:             0.0.1.0
homepage:            https://github.com/utdemir/calc
license:             BSD-3-Clause
author:              Utku Demir
maintainer:          Utku Demir
copyright:           Utku Demir
category:            Data
build-type:          Simple

common common-options
  ghc-options:        -threaded
                      -Wall -Wpartial-fields -Wincomplete-record-updates -Widentities
                      -Wunused-packages
  default-language:    Haskell2010
  default-extensions: LambdaCase
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      GeneralizedNewtypeDeriving
                      DeriveGeneric
                      DeriveFunctor
                      DerivingStrategies
                      FlexibleInstances
                      DeriveLift
                      StandaloneDeriving
                      DataKinds
                      KindSignatures
  mixins:             base hiding (Prelude)
  build-depends:      base
                    , relude

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude
                     , Calc
                     , Calc.Corpus
                     , Calc.Tokenizer
                     , Calc.Tokenizer.Types
                     , Calc.Lexer
                     , Calc.Lexer.Types
                     , Calc.Parser
                     , Calc.Simplifier
                     , Calc.Parser.Types
                     , Calc.Unit
                     , Calc.Unit.Types
                     , Calc.Unit.Definition
                     , Data.Decimal.Extra
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       bytestring
                     , Decimal
                     , Earley
                     , containers
                     , text
                     , recursion
                     , template-haskell

test-suite calc-tests
  import:           common-options
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    base >=4.11 && < 5
                  , calc-core
                  , hedgehog
